dev/kustomize/forgeops-tests/base/tests-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: forgeops-tests
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
    spec:

      volumes:
      - name: reports
        emptyDir: {}

      containers:
      - name: forgeops-tests-reports
        image: nginx
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 500Mi
            cpu: 1 
          requests:
            memory: 250Mi
        ports:
          - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html/tests
            name: reports
