dev/kustomize/forgeops-tests/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT,GET,POST,HEAD,PATCH,DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "authorization,x-requested-with,accept-api-version,content-type"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:8888"
  name: forgeops-tests
spec:
  rules:
  - host: default.iam.forgeops.com
    http:
      paths:
      - backend:
          serviceName: forgeops-tests
          servicePort: 80
        path: /tests
  tls:
  - hosts:
    - default.iam.forgeops.com
    secretName: default.iam.forgeops.com
